fixed spacing issue under img on resume page

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,10 @@
   padding: 2em;
 }
 
+.resume-body img {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
 
 .contact-grid {
   text-align: center;
